[package]
name = "ackr"
version = "1.1.0"
authors = ["Daniel Fagnan <dnfagnan@gmail.com>"]
documentation = "https://github.com/thehydroimpulse/ackr"
homepage = "https://github.com/thehydroimpulse/ackr"
repository = "https://github.com/thehydroimpulse/ackr"
license = "MIT"
description = "Storm acking algorithm in Rust"

[dependencies]
